--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,10 @@
     <title>Homepage</title>
 </head>
 <body>
-    
+    <header>
+        
+    </header>
+    <main></main>
+    <footer></footer>
 </body>
 </html>
