Completed contact info for the footer

--- a/src/template.html
+++ b/src/template.html
@@ -10,6 +10,34 @@
         
     </header>
     <main></main>
-    <footer></footer>
+    <footer>
+        <div class="contact-info">
+            <h1>Contact Me</h1>
+            <p>Please get in touch if you think our work
+                could be mutually beneficial!
+            </p>
+            <p>
+                1234 Random Road
+                Random Town, California 12345
+            </p>
+            <div class="phone-number">
+                <span>
+                    <img src="./assets/img/phone.svg" alt="">
+                </span>
+                555-555-5555
+            </div>
+            <div class="email">
+                <span>
+                    <img src="./assets/img/mail.svg" alt="">
+                </span>
+                ashleywilliams.is.not.real@gmail.com
+            </div>
+            <div class="icons">
+                <img src="./assets/img/github-original.svg" alt="">
+                <img src="./assets/img/linkedin-plain.svg" alt="">
+                <img src="./assets/img/twitter-original.svg" alt="">
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
