Completed responsive footer with dynamic image sizing

--- a/src/template.html
+++ b/src/template.html
@@ -16,21 +16,21 @@
             <p>Please get in touch if you think our work
                 could be mutually beneficial!
             </p>
-            <p>
-                1234 Random Road
+            <p class="address">
+                1234 Random Road <br>
                 Random Town, California 12345
             </p>
             <div class="phone-number">
                 <span>
                     <img src="./assets/img/phone.svg" alt="">
                 </span>
-                555-555-5555
+                <span>555-555-5555</span>
             </div>
             <div class="email">
                 <span>
                     <img src="./assets/img/mail.svg" alt="">
                 </span>
-                ashleywilliams.is.not.real@gmail.com
+                <span>ashleywilliams.is.not.real@gmail.com</span>
             </div>
             <div class="icons">
                 <img src="./assets/img/github-original.svg" alt="">
@@ -38,6 +38,7 @@
                 <img src="./assets/img/twitter-original.svg" alt="">
             </div>
         </div>
+        <img src="./assets/img/footer-stock-img.jpg" alt="Footer Stock Image">
     </footer>
 </body>
 </html>
