--- a/index.html
+++ b/index.html
@@ -16,21 +16,21 @@
             <p>Please get in touch if you think our work
                 could be mutually beneficial!
             </p>
-            <p>
-                1234 Random Road
+            <p class="address">
+                1234 Random Road <br>
                 Random Town, California 12345
             </p>
             <div class="phone-number">
                 <span>
                     <img src="6c4a95dce25648bd3a83.svg" alt="">
                 </span>
-                555-555-5555
+                <span>555-555-5555</span>
             </div>
             <div class="email">
                 <span>
                     <img src="7f0434c970270181a5bb.svg" alt="">
                 </span>
-                ashleywilliams.is.not.real@gmail.com
+                <span>ashleywilliams.is.not.real@gmail.com</span>
             </div>
             <div class="icons">
                 <img src="3c903c66b2c5334c8c0b.svg" alt="">
@@ -38,6 +38,7 @@
                 <img src="800640b7f2cab3132c69.svg" alt="">
             </div>
         </div>
+        <img src="cfde59f2167d6dea6bca.jpg" alt="Footer Stock Image">
     </footer>
 </body>
 </html>
