--- a/index.html
+++ b/index.html
@@ -9,10 +9,116 @@
     <header>
         
     </header>
-    <main></main>
+    <main>
+        <h2>My work</h2>
+        <div class="project-container">
+            <article class="project-card">
+                <div class="project-1-image project-image">
+                    <span>screenshot<br>of project</span>
+                </div>
+                <div class="project-info">
+                    <div class="project-header">
+                        <h3>Project name</h3>
+                        <div class="project-links">
+                            <img src="3c903c66b2c5334c8c0b.svg" alt="">
+                            <img src="55be3768177e9c1e0aed.svg" alt="">
+                        </div>
+                    </div>
+                    <p>Short description of the project. Just a
+                        couple sentences will do.
+                    </p>
+                </div>
+            </article>
+            <article class="project-card">
+                <div class="project-2-image project-image">
+                    <span>screenshot<br>of project</span>
+                </div>
+                <div class="project-info">
+                    <div class="project-header">
+                        <h3>Project name</h3>
+                        <div class="project-links">
+                            <img src="3c903c66b2c5334c8c0b.svg" alt="">
+                            <img src="55be3768177e9c1e0aed.svg" alt="">
+                        </div>
+                    </div>
+                    <p>Short description of the project. Just a
+                        couple sentences will do.
+                    </p>
+                </div>
+            </article>
+            <article class="project-card">
+                <div class="project-3-image project-image">
+                    <span>screenshot<br>of project</span>
+                </div>
+                <div class="project-info">
+                    <div class="project-header">
+                        <h3>Project name</h3>
+                        <div class="project-links">
+                            <img src="3c903c66b2c5334c8c0b.svg" alt="">
+                            <img src="55be3768177e9c1e0aed.svg" alt="">
+                        </div>
+                    </div>
+                    <p>Short description of the project. Just a
+                        couple sentences will do.
+                    </p>
+                </div>
+            </article>
+            <article class="project-card">
+                <div class="project-4-image project-image">
+                    <span>screenshot<br>of project</span>
+                </div>
+                <div class="project-info">
+                    <div class="project-header">
+                        <h3>Project name</h3>
+                        <div class="project-links">
+                            <img src="3c903c66b2c5334c8c0b.svg" alt="">
+                            <img src="55be3768177e9c1e0aed.svg" alt="">
+                        </div>
+                    </div>
+                    <p>Short description of the project. Just a
+                        couple sentences will do.
+                    </p>
+                </div>
+            </article>
+            <article class="project-card">
+                <div class="project-5-image project-image">
+                    <span>screenshot<br>of project</span>
+                </div>
+                <div class="project-info">
+                    <div class="project-header">
+                        <h3>Project name</h3>
+                        <div class="project-links">
+                            <img src="3c903c66b2c5334c8c0b.svg" alt="">
+                            <img src="55be3768177e9c1e0aed.svg" alt="">
+                        </div>
+                    </div>
+                    <p>Short description of the project. Just a
+                        couple sentences will do.
+                    </p>
+                </div>
+            </article>
+            <article class="project-card">
+                <div class="project-6-image project-image">
+                    <span>screenshot<br>of project</span>
+                </div>
+                <div class="project-info">
+                    <div class="project-header">
+                        <h3>Project name</h3>
+                        <div class="project-links">
+                            <img src="3c903c66b2c5334c8c0b.svg" alt="">
+                            <img src="55be3768177e9c1e0aed.svg" alt="">
+                        </div>
+                    </div>
+                    <p>Short description of the project. Just a
+                        couple sentences will do.
+                    </p>
+                </div>
+            </article>
+        </div>
+    </main>
     <footer>
         <div class="contact-info">
-            <h1>Contact Me</h1>
+            <h1>Contact me</h1>
             <p>Please get in touch if you think our work
                 could be mutually beneficial!
             </p>
