Initial header design

--- a/src/template.html
+++ b/src/template.html
@@ -6,8 +6,20 @@
     <title>Homepage</title>
 </head>
 <body>
+    <div class="header-background"></div>
     <header>
-        
+        <div class="header-content">
+            <img src="./assets/img/header-stock-img.jpg" alt="">
+            <div class="header-info">
+                <h2>About me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt optio nulla expedita ducimus dolorum quia quos culpa porro doloribus, unde explicabo itaque atque amet obcaecati cumque asperiores aut quisquam quod.</p>
+                <div class="header-links">
+                    <img src="./assets/img/github-original.svg" alt="">
+                    <img src="./assets/img/linkedin-plain.svg" alt="">
+                    <img src="./assets/img/twitter-original.svg" alt="">
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <h2>My work</h2>
