--- a/index.html
+++ b/index.html
@@ -6,8 +6,20 @@
     <title>Homepage</title>
 <script defer src="main.js"></script></head>
 <body>
+    <div class="header-background"></div>
     <header>
-        
+        <div class="header-content">
+            <img src="5e4fb06dd806f9735eb4.jpg" alt="">
+            <div class="header-info">
+                <h2>About me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt optio nulla expedita ducimus dolorum quia quos culpa porro doloribus, unde explicabo itaque atque amet obcaecati cumque asperiores aut quisquam quod.</p>
+                <div class="header-links">
+                    <img src="3c903c66b2c5334c8c0b.svg" alt="">
+                    <img src="d4e41ebf9944039eda77.svg" alt="">
+                    <img src="800640b7f2cab3132c69.svg" alt="">
+                </div>
+            </div>
+        </div>
     </header>
     <main>
         <h2>My work</h2>
